--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,35 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
-
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: congress_development
+  pool: 5
+  username: congress
+  password:
+  host: localhost
+  min_messages: warning
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
+test: &test
+  adapter: postgresql
+  encoding: unicode
+  database: congress_test
+  pool: 5
+  username: congress
+  password:
+  host: localhost
+  min_messages: warning
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: congress_production
+  pool: 5
+  username: congress
+  password:
+  timeout: 5000
+
+cucumber:
+  <<: *test
+
